# entity/category_filter.go
@@ -1,11 +1,0 @@
-package entity
-
-// CategoryFilter struct represents a category filter.
-type CategoryFilter struct {
-	CategoryID   string
-	ParentID     string
-	CategoryIDs  []string
-	Path         string
-	FindChildren bool
-	FindAll      bool
-}
